--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,22 +1,18 @@
+body {
+    margin: 0;
+}
+
 @font-face {
     font-family: 'RobotoThin';
     src: url('../assets/fonts/Roboto-Thin-webfont.woff');
 }
+
 @font-face {
     font-family: 'RobotoMedium';
     src: url('../assets/fonts/Roboto-Medium-webfont.woff');
 }
-body {
-    margin: 0;
-}
-div#timer {
-    font-family: RobotoThin, sans-serif;
-    font-size: 80px;
-    color: #D50000;
-    text-align: center;
-    margin-top: 15px;
-}
-#app-bar {
+
+.app-bar {
     font-family: RobotoMedium, sans-serif;
     font-size: 20px;
     color: white;
@@ -25,7 +21,8 @@ div#timer {
     height: 56px;
     line-height: 56px;
 }
-#tabs {
+
+.tabs {
     font-family: RobotoMedium, sans-serif;
     font-size: 13px;
     color: white;
@@ -39,18 +36,27 @@ div#timer {
     cursor: pointer;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
-#tabs div {
+
+.tabs .tab {
     flex-grow: 1;
     text-align: center;
     color: rgba(255, 255, 255, 0.6);
 }
 
-#tabs div.selected {
+.tabs .tab.selected {
     border-bottom: 2px solid white;
     color: white;
 }
 
-#startStop {
+.timer-display {
+    font-family: RobotoThin, sans-serif;
+    font-size: 80px;
+    color: #D50000;
+    text-align: center;
+    margin-top: 15px;
+}
+
+#floating-action-button {
     height: 50px;
     width: 50px;
     background-color: #D50000;
@@ -62,15 +68,18 @@ div#timer {
     cursor: pointer;
 }
 
-#startStop div {
+#floating-action-button div {
     height: 24px;
     width: 24px;
     position: relative;
     top: 14px;
     left: 14px;
-    background: url('../assets/images/ic_stop_24px.svg') 24px;
 }
 
-#startStop.start div {
+#floating-action-button.start div {
     background: url('../assets/images/ic_play_arrow_24px.svg') 24px;
+}
+
+#floating-action-button.stop div {
+    background: url('../assets/images/ic_stop_24px.svg') 24px;
 }
